# G4Horus

./: .clang-format  .cmake-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  G4Batch.sh  G4Horus.cc  G4Horus.sh  conanfile.txt  log.txt  main.cc  package_install.R  readme.md
efficiency_ywang/: DataPlot.R  DetLog.txt  Ra_226.txt  efficiency.cxx  efficiency.sh  make_doit.sh
efficiency_ywang/Tables/: A0_sim.csv  A1_sim.csv  A2_sim.csv  A3_sim.csv  B0_sim.csv  B1_sim.csv  B2_sim.csv  B3_sim.csv
efficiency_ywang/efficiencies_10cm/: A0_Ra.csv  A1_Ra.csv  A2_Ra.csv  A3_Ra.csv  B0_Ra.csv  B1_Ra.csv  B2_Ra.csv  B3_Ra.csv
scripts/: .Decay_Scheme_Ir190_Q1954.txt.swp  Decay_Scheme_226Ra.csv  Decay_Scheme_93Fe.csv  Decay_Scheme_96Tc.csv  Decay_Scheme_Ir190_Q1954.txt  Decay_Scheme_Sn111.csv  Decay_Scheme_Sn111_Q2451.txt  G4Horus.mac  Ra_226.mac  batch_default.mac  cascade.mac  doit_Decay_Scheme_152Eu.mac  doit_Decay_Scheme_226Ra.mac  doit_Decay_Scheme_93Fe.mac  doit_Decay_Scheme_96Tc.mac  doit_Decay_Scheme_Sn111.mac  doit_from1000keV_upto1000keV_step0keV.mac  doit_from100keV_upto2500keV_step20keV.mac  list_cascade.txt  make_doit.sh  make_doit_cascade.sh  test_cas.mac  testlonger.mac  vis.mac
scripts/DecaySchemes/: 111Sn_111In.csv  edit.R
src/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  G4Horus.cc  G4Horus.hh  Messenger.cc  Messenger.hh
src/actions/: ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  CascadeMessenger.cc  CascadeMessenger.hh  EventAction.cc  EventAction.hh  EventActionHistogram.cc  EventActionHistogram.hh  EventActionNtuple.cc  EventActionNtuple.hh  EventActionSoco.cc  EventActionSoco.hh  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionCascade.cc  PrimaryGeneratorActionCascade.hh  PrimaryGeneratorCascade.cc  PrimaryGeneratorCascade.hh  RunAction.cc  RunAction.hh  RunActionHistogram.cc  RunActionHistogram.hh  RunActionNtuple.cc  RunActionNtuple.hh  Shared.hh
src/actions/generators/: CMakeLists.txt  PrimaryGeneratorActionScattering.cc
src/actions/generators/cascade/: CMakeLists.txt  CascadeGeneratorAction.cc  CascadeGeneratorAction.hh  CascadeMessenger.cc  CascadeMessenger.hh  DecayEngine.cc  DecayEngine.hh  DecayJSONReader.cc  DecayJSONReader.hh  DecayScheme.cc  DecayScheme.hh  DecayTypes.cc  DecayTypes.hh
src/definitions/: CMakeLists.txt  Definitions.hh
src/detectors/: BGO.cc  CMakeLists.txt  Detector.cc  Detector.hh  DetectorLibrary.cc  DetectorLibrary.hh  Filter.cc  HPGe.cc  HPGeClover.cc  HPGeClover.hh  HPGeClover_Marvin.cc  HPGeCoaxial.cc  HPGeHexagonal.cc  PIPS.cc
src/geometries/: CMakeLists.txt  CologneCloverSetup.cc  Horus.cc  Setup.cc  Setup.hh
src/sensitives/: CMakeLists.txt  CloverHit.hh  CloverSD.cc  CloverSD.hh  readme.md
src/soco/: CMakeLists.txt  SocoFileMessenger.cc
summing_eff_ywang/: .Rhistory  Compare_draw.R  SummingCorrectionFactor.csv  Summing_Sim_Ex_Comp_226Ra.csv  analysis.R  combine.R  correction_factor.cxx  correction_factor.sh  edwin_Ra226.csv  factors.csv  other_152Eu.csv  other_226Ra.csv
summing_eff_ywang/transitions/: .Rhistory  110InM1_110CdM1_0.csv  110InM1_110CdM1_1.csv  110In_110CdM1_0.csv  144Nd_140Ce_0.csv  148Sm_144Nd_0.csv  152EuM1_152Gd_1.csv  152Eu_152Gd_0.csv  152Eu_152Sm_0.csv  152Gd_148Sm_0.csv  210Bi_210Po_0.csv  210Pb_210Bi_0.csv  210Pb_210Bi_1.csv  210Po_206Pb_0.csv  210Po_206Pb_1.csv  214Bi_214Po_0.csv  214Bi_214Po_1.csv  214Pb_214Bi_0.csv  214Pb_214Bi_1.csv  214Po_210Pb_0.csv  214Po_210Pb_1.csv  218Po_214Pb_0.csv  222Rn_218Po_0.csv  222Rn_218Po_1.csv  226Ra_222Rn_0.csv  226Ra_222Rn_1.csv  main.R
summing_eff_ywang/trash/: Summing_Sim_Ex_Comp_152Eu.csv  Summing_Sim_Ex_Comp_226Ra.csv  combine.R  efficiencies.csv
test/: CMakeLists.txt  DecayEngineTest.cc  DecayIteratorTest.cc  DecaySchemeTest.cc  JSONReaderTest.cc  test.json  test.mac
utils/: settings.yml
